Added: header footer templates

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,4 @@
+<%- include("partials/header") %>
 <h1> campgrounds</h1>
 
 <% campgrounds.forEach(function(camp){  %>
@@ -8,3 +9,5 @@
     </div>
 
 <%});%>
+
+<%- include("partials/footer") %>
