--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,9 @@
+<%- include("partials/header") %>
+
 <h1>it is a landing page</h1>
 
 <p>Welcome</p>
 
 <a href="/campgrounds"> view campings</a>
+
+<%- include("partials/footer") %>
