redirecting a tag from campgrounds to form

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") %>
 <h1> campgrounds</h1>
-
+<a href="/camogrounds/new"> Add New Campground</a>
 <% campgrounds.forEach(function(camp){  %>
     
     <div> 
