Header/'Navbar', New.ejs/'Form design',Footer.ejs/'p del.'

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,13 +1,27 @@
 <%- include("partials/header") %>
-<h1> campgrounds</h1>
-<a href="/camogrounds/new"> Add New Campground</a>
-<% campgrounds.forEach(function(camp){  %>
-    
-    <div> 
-       <h4> <%= camp.name %> </h4> 
-       <img src="<%= camp.image %>" alt="pics of camp places">
+<div class="container">
+    <header class="jumbotron">
+        <div class="container">
+            <h1> Find Awsome Campgrounds Here!!!</h1>
+            <p> view our campgrounds all over the world</p>
+            <p>
+                <a href="/campgrounds/new" class="btn btn-primary btn-lg"> Add New Campground</a>
+            </p>
+        </div>
+    </header>
+
+    <div class="row text-center" style="display: flex; flex-wrap: wrap;" >
+        <% campgrounds.forEach(function(camp){  %>
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail"> 
+                    <img src="<%= camp.image %>" alt="pics of camp places">
+                    <div class="caption">
+                        <h4> <%= camp.name %> </h4> 
+                    </div>
+                </div>
+            </div>
+        <%});%>
     </div>
 
-<%});%>
-
+</div>
 <%- include("partials/footer") %>
