--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,4 +8,21 @@
     </head>
     <body>
         
-   <p>header</p>
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <a class="navbar-brand" href="/">Yelp</a>
+              </div>
+          
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#">Login</a></li>
+                      <li><a href="#"> Sing Up</a></li>
+                      <li><a href="#">Logout</a></li>       
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </nav>
