--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 
 
 
@@ -24,4 +24,4 @@
         </div>
     </div>
 </div>
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
