Login and Logout Routs,+Navbar added

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,5 +4,5 @@
 
 <input type="text" name='username' placeholder="username">
 <input type="password" name="password" placeholder='password'>
-<button> Sing up</button>
+<button> Sing up!</button>
 </form>
