--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,5 @@
+
+<%- include("./partials/header") %>
 <h1>Sing Up</h1>
 
 <form action="/register" method="POST">
@@ -6,3 +8,4 @@
 <input type="password" name="password" placeholder='password'>
 <button> Sing up!</button>
 </form>
+<%- include("./partials/footer") %>
