--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,9 +17,12 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    <% if(!currentUser){ %>
                       <li><a href="/login">Login</a></li>
                       <li><a href="/register"> Sing Up</a></li>
-                      <li><a href="/logout">Logout</a></li>       
+                    <% }else{ %>
+                      <li><a href="/logout">Logout</a></li>     
+                   <% } %> 
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
