--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,7 @@
                       <li><a href="/login">Login</a></li>
                       <li><a href="/register"> Sing Up</a></li>
                     <% }else{ %>
+                      <li> <a href="#">  Signed In As <%= currentUser.username %></a> </li>     
                       <li><a href="/logout">Logout</a></li>     
                    <% } %> 
                 </ul>
