--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
             YelpCamp
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    </head>
+        <link rel="stylesheet" href="/style/main.css">
+      </head>
     <body>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
