--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,7 +17,8 @@
                     <h4><a href="#"><%=campground.name%></a></h4>
                     <p><%=campground.description%></p>
                     <p><em>Author:</em> <%=campground.author.username%></p>
-                </div>
+                    <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                    </div>
             </div>
             <div class="well">
                 <div class="text-right">
