checkCampgroundOwn. midfunction. edit route authorithation, buttons show

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1> Find Awsome Campgrounds Here!!!</h1>
+            <h1> Find Awesome Campgrounds Here!!!</h1>
             <p> view our campgrounds all over the world</p>
             <p>
                 <a href="/campgrounds/new" class="btn btn-primary btn-lg"> Add New Campground</a>
