--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,8 +17,13 @@
                     <h4><a href="#"><%=campground.name%></a></h4>
                     <p><%=campground.description%></p>
                     <p><em>Author:</em> <%=campground.author.username%></p>
-                    <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                    </div>
+                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                        <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
+                    <% }%>   
+                </div>
             </div>
             <div class="well">
                 <div class="text-right">
