--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            YelpCamp
-        </title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/style/main.css">
-      </head>
-    <body>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                <a class="navbar-brand" href="/">Yelp</a>
-              </div>
+<head>
+  <title>
+    YelpCamp
+  </title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/style/main.css">
+</head>
+<body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Yelp</a>
+      </div>
+      
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <% if(!currentUser){ %>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register"> Sing Up</a></li>
+            <% }else{ %>
+              <li> <a href="#">  Signed In As <%= currentUser.username %></a> </li>     
+              <li><a href="/logout">Logout</a></li>     
+              <% } %> 
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+      
+      <div class="container">
+        
+        <% if(error && error.length > 0){ %>
+          <div class="alert alert-danger" role="alert">
+            <%= error %>
+          </div>
+          <% } %>
+          <% if(success && success.length > 0){ %>
+            <div class="alert alert-success" role="alert">
+              <%= success %>
+            </div>
+            <% } %>
+          </div>
           
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <% if(!currentUser){ %>
-                      <li><a href="/login">Login</a></li>
-                      <li><a href="/register"> Sing Up</a></li>
-                    <% }else{ %>
-                      <li> <a href="#">  Signed In As <%= currentUser.username %></a> </li>     
-                      <li><a href="/logout">Logout</a></li>     
-                   <% } %> 
-                </ul>
-              </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-          </nav>
-
-
+          
